# running_jetson

./: README.md
dynamixel_current_2port/: README.md  alias.txt
dynamixel_current_2port/dynamixel_current_2port/: CMakeLists.txt  default.gpfl  package.xml
dynamixel_current_2port/dynamixel_current_2port/config/: parameters.yml
dynamixel_current_2port/dynamixel_current_2port/include/: Move_decision.hpp  Walkingpattern_generator.hpp  callback.hpp  dynamixel.hpp  img_proc.hpp  sensor.hpp
dynamixel_current_2port/dynamixel_current_2port/launch/: Move_decision.launch  dynamixel_current_2port.launch
dynamixel_current_2port/dynamixel_current_2port/src/: Move_decision.cpp  Move_decision_node.cpp  Sensor_node.cpp  Walkingpattern_generator.cc  callback.cpp  dynamixel.cpp  dynamixel_controller.cpp  fsr_ux_420_short.ino  img_proc.cpp  img_proc2.cpp  img_proc_basketball.cpp  main.cpp  main_2.cpp  sensor.cpp
dynamixel_current_2port/dynamixel_current_2port/srv/: Emergency.srv  RL_NeckAngle.srv  Select_Motion.srv  SendMotion.srv  Turn_Angle.srv  UD_NeckAngle.srv
